add_executable(1333_test
    ../1301-1400/1333_solution_1.hpp
    1333_test.cpp
)
target_link_libraries(1333_test
    gtest_main
)

add_executable(316_test
    ../301-400/316_solution_1.hpp
    316_test.cpp
)
target_link_libraries(316_test
    gtest_main
)

add_executable(1491_test
    ../1401-1500/1491_solution_1.hpp
    1491_test.cpp
)
target_link_libraries(1491_test
    gtest_main
)